deploy/prod/01_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - relay-router.prod.plugins.vultisig.com
      secretName: relay-router-tls
  rules:
    - host: relay-router.prod.plugins.vultisig.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  number: 80
